Replaced all leading TABs with SPACEs.
Having TABs in the source code results in very strange behaviour with
normal everyday work and with patching branches.

As a result, all the TAB characters have been repalce with 4 SPACE
characters to make life easier.

Signed-off-by: Gary Pampara <gpampara@gmail.com>