@@ -33,93 +33,93 @@ import net.sourceforge.cilib.type.types.Type;
  * @author Edwin Peer
  */
 public class Time implements Measurement, AlgorithmListener {
-	private static final long serialVersionUID = -3516066813688827758L;
+    private static final long serialVersionUID = -3516066813688827758L;
 
-	private boolean running = false;
-	private long startTime;
-	private long endTime;
+    private boolean running = false;
+    private long startTime;
+    private long endTime;
 
-	/**
-	 * Create a default instance of {@linkplain Time}.
-	 */
-	public Time() {
-		running = false;
-		startTime = System.currentTimeMillis();
-		endTime = startTime;
-	}
+    /**
+     * Create a default instance of {@linkplain Time}.
+     */
+    public Time() {
+        running = false;
+        startTime = System.currentTimeMillis();
+        endTime = startTime;
+    }
 
-	/**
-	 * Copy constructor. Create a copy of the given instance.
-	 * @param copy The instance to copy.
-	 */
-	public Time(Time copy) {
-		running = copy.running;
-		startTime = copy.startTime;
-		endTime = copy.endTime;
-	}
+    /**
+     * Copy constructor. Create a copy of the given instance.
+     * @param copy The instance to copy.
+     */
+    public Time(Time copy) {
+        running = copy.running;
+        startTime = copy.startTime;
+        endTime = copy.endTime;
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public Time getClone() {
-		return new Time(this);
-	}
+    /**
+     * {@inheritDoc}
+     */
+    public Time getClone() {
+        return new Time(this);
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public String getDomain() {
-		return "Z";
-		//return "T";
-	}
+    /**
+     * {@inheritDoc}
+     */
+    public String getDomain() {
+        return "Z";
+        //return "T";
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public Type getValue(Algorithm algorithm) {
-		if (running) {
-			Int t = new Int();
-			t.setReal(Long.valueOf(System.currentTimeMillis() - startTime));
-			//return new Long(System.currentTimeMillis() - startTime);
-			return t;
-		}
-		else {
-			Int i = new Int();
-			i.setReal(endTime - startTime);
-			//return new Integer((int) (endTime - startTime));
-			return i;
-		}
-	}
+    /**
+     * {@inheritDoc}
+     */
+    public Type getValue(Algorithm algorithm) {
+        if (running) {
+            Int t = new Int();
+            t.setReal(Long.valueOf(System.currentTimeMillis() - startTime));
+            //return new Long(System.currentTimeMillis() - startTime);
+            return t;
+        }
+        else {
+            Int i = new Int();
+            i.setReal(endTime - startTime);
+            //return new Integer((int) (endTime - startTime));
+            return i;
+        }
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public void algorithmStarted(AlgorithmEvent e) {
-		running = true;
-		startTime = System.currentTimeMillis();
-	}
+    /**
+     * {@inheritDoc}
+     */
+    public void algorithmStarted(AlgorithmEvent e) {
+        running = true;
+        startTime = System.currentTimeMillis();
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public void algorithmFinished(AlgorithmEvent e) {
-		endTime = System.currentTimeMillis();
-		running = false;
-	}
+    /**
+     * {@inheritDoc}
+     */
+    public void algorithmFinished(AlgorithmEvent e) {
+        endTime = System.currentTimeMillis();
+        running = false;
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public void algorithmTerminated(AlgorithmEvent e) {
-		endTime = System.currentTimeMillis();
-		running = false;
-	}
+    /**
+     * {@inheritDoc}
+     */
+    public void algorithmTerminated(AlgorithmEvent e) {
+        endTime = System.currentTimeMillis();
+        running = false;
+    }
 
-	/**
-	 * {@inheritDoc}
-	 */
-	public void iterationCompleted(AlgorithmEvent e) {
+    /**
+     * {@inheritDoc}
+     */
+    public void iterationCompleted(AlgorithmEvent e) {
 
-	}
+    }
 
 }
